# svd

./: .gitignore  CMakeLists.txt  main.cpp
SingularValues/C/: Singular values CPP 32X24.txt  Singular values CPP2 128X96.txt  Singular values CPP2 1600X1200.txt  Singular values CPP2 160X120.txt  Singular values CPP2 200X150.txt  Singular values CPP2 3X2.txt  Singular values CPP2 400X300.txt  Singular values CPP2 48X36.txt  Singular values CPP2 4X4.txt  Singular values CPP2 96X72.txt
SingularValues/CudaDevice/OneSidedSequential/: Singular Values Cuda Device 4x4.txt
SingularValues/CudaHost/: Singular Values Cuda Host 4x4.txt
Time/CudaDevice/OneSidedParallelGlobal/: Time 128x96.txt  Time 32x24.txt  Time 400x300.txt  Time 48x36.txt  Time 4x4.txt
Time/CudaDevice/OneSidedParallelShared/: Time 128x96.txt  Time 200x150.txt  Time 32x24.txt  Time 48x36.txt  Time 4x4.txt  Time 96x72.txt
Time/CudaDevice/OneSidedSequential/: Time 200x150.txt  Time 32x24.txt  Time 4x4.txt
Time/CudaHost/: Time 128x96.txt  Time 200x150.txt  Time 32x24.txt  Time 400x300.txt  Time 48x36.txt  Time 96x72.txt
include/: Jacobi.h  host_func.h
src/: Jacobi.cpp  OneSidedJacobiSequential.cu  generate.cpp  host_func.cpp  oneSidedSequential.cu  svd_main.cpp  svd_one_sided_jacobi_CPP.cpp  svd_one_sided_jacobi_CPP_cuda.cpp
